# garden_cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  clang.sh  dev.sh  index.html
cmake/: merge_compile_commands.cmake
src/: index.js  main.cpp
src/client/: CMakeLists.txt  document.cpp  document.hpp  index.html  main.cpp
src/server/: CMakeLists.txt  db.cpp  db.hpp  main.cpp  match.cpp  match.hpp
src/shared/: CMakeLists.txt  plant.cpp  plant.hpp
